sparkmulti/kube/localdocker.yml
apiVersion: v1
kind: Pod
metadata:
  name: ldc
spec:
  containers:
  - name: private-reg-container
    image: master.e4rlearning.com:5000/nginx
  imagePullSecrets:
  - name: regsecret
