sparkmulti/kube/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    environment: test
spec:
  replicas: 3
  selector:
    matchLabels:
      environment: test
  template:
    metadata:
      labels:
        environment: test
    spec:
      containers:
      - image: nginx:1.16
      # - frooti: wahbhaiya
        name: nginx
