sparkmulti/kube/privatereg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: samar67/mnginx
  imagePullSecrets:
  - name: regcred
