sparkmulti/kube/nginx_nodeport_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  ports:
   - port: 8091
     targetPort: 80
     nodePort: 30123
  selector:
    environment: test
