sparkmulti/kube/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnxsvc
spec: 
  ports:
   - port: 8092
     targetPort: 80
  selector:
    environment: test
