sparkmulti/kube/spark_headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkhls
spec:
  clusterIP: None
  ports:
    - port: 20200
      targetPort: 20200
  selector:
   app: sparkubecl
