sparkmulti/kube/nginx_test_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
   - host: ng.example.com
     http:
      paths:
       - path: /
         backend:
           serviceName: nginx-nodeport
           servicePort: 80
